standard curriculam section

--- a/index.html
+++ b/index.html
@@ -22,12 +22,53 @@
                 <p class="facilities">Facilities</p>
                 <p class="admission">Admission</p>
             </div>
-            <button class="nav-button">Contact Us</button>
+            <button class="nav-btn primary-btn">Contact Us</button>
             <img src="./assets/menu.png" alt="menu bar" class="menu">
         </div>
+        <section class="hero-section">
+            <div class="hero-container">
+                <div class="hero-des-container">
+                    <h2 class="hero-title"><span class="h-t-orange">Empowering</span> <br><span class="h-t-black">students from small<br> age</span> <span class="h-t-skyblue">towards vision</span></h2>
+                    <p>Together we create a loving community of purposeful learning<br> that focuses on the whole child; body, mind, and spirit.</p>
+                    <button class="enroll-btn primary-btn">Enroll Now</button>
+                </div>
+                <div class="img-container">
+                    <img src="./assets/hero-kids.png" alt="a child stand like a superman" class="hero-child">
+                </div>
+            </div>
+        </section>
     </header>
     <main>
-
+        <section class="standard-curriculam">
+            <div class="curriculam-container">
+                <h2 class="carriculam-title">Standard Carriculam</h2>
+                <div class="cards-container">
+                    <div class="card-one">
+                        <img src="./assets/kinder.png" alt="">
+                        <h4>Kinder (3-6) Years</h4>
+                        <p>Where little hearts learn, play, and grow! Our kindergarten is a joyful place where every day is an adventure in discovery and fun. </p>
+                        <h5 class="read-1">Read More</h5>
+                    </div>
+                    <div class="card-two">
+                        <img src="./assets/elementary.png" alt="">
+                        <h4>Elementary School</h4>
+                        <p>Welcome to a place where learning meets imagination! Our elementary school is dedicated to fostering curiosity, building strong foundations.</p>
+                        <h5 class="read-2">Read More</h5>
+                    </div>
+                    <div class="card-three">
+                        <img src="./assets/middle.png" alt="">
+                        <h4>Middle (10-16) Years</h4>
+                        <p>Empowering young minds to dream big and achieve more! Our school fosters critical thinking, creativity, and strong values to help students.</p>
+                        <h5 class="read-3">Read More</h5>
+                    </div>
+                </div>
+                    <div class="arrow-sign">
+                        <img src="./assets/arrow.png" alt="" class="left-arrow">
+                        <img src="./assets/arrow.png" alt="" class="right-arrow">
+                    </div>
+            </div>
+        </section>
+        
     </main>
     <footer>
 
