--- a/index.html
+++ b/index.html
@@ -68,10 +68,60 @@
                     </div>
             </div>
         </section>
+        <section class="our-stories">
+            <h2 class="stories-title">Our Stories</h2>
+            <div class="stories-parent">
+                <div class="stories-child1">
+                    <img src="./assets/story-1.png" alt="" class="child-img">
+                    <button class="date">19 Novermbar 2019</button>
+                    <h3 class="child1-heading">A fun toddler coloring training on
+                        classroom</h3>
+                    <p>Beautiful branding for changes by Never Now in Australia.<br>
+                        changes is a platform for open discussion in an <br>
+                        inclusive and collaborative environment.</p>
+                </div>
+                <div class="stories-child2">
+                    <div class="child-parent">
+                        <div class="child-of-child">
+                            <img src="./assets/story-2.png" alt="" class="child-img"><br>
+                            <button class="child-Of-child-btn">19 Novermbar 2019</button>
+                            <h5>Find out if a school fits the
+                                family's needs</h5>
+                        </div>
+                        <div class="child-of-child">
+                            <img src="./assets/story-3.png" alt="" class="child-img"><br>
+                            <button class="child-Of-child-btn">19 Novermbar 2019</button>
+                            <h5>Summer math & literacy
+                                centres for kids</h5>
+                        </div>
+                    </div>
+
+                    <div class="child-parent">
+                        <div class="child-of-child">
+                            <img src="./assets/story-4.png" alt="" class="child-img"><br>
+                            <button class="child-Of-child-btn">19 Novermbar 2019</button>
+                            <h5>Classroom management
+                                techniques</h5>
+                        </div>
+                        <div class="child-of-child">
+                            <img src="./assets/story-5.png" alt="" class="child-img"><br>
+                            <button class="child-Of-child-btn">19 Novermbar 2019</button>
+                            <h5>Conversation rhymes
+                                improve kids listening</h5>
+                        </div>
+                    </div>
+                </div>
+            </div> 
+            <div class="btn-container">
+                <button class="view-btn primary-btn">View All</button>
+            </div>       
+        </section>
         
     </main>
     <footer>
-
+        <div class="footer-container">
+            
+        </div>
     </footer>
 </body>
 </html>
