--- a/index.html
+++ b/index.html
@@ -118,9 +118,33 @@
         </section>
         
     </main>
-    <footer>
-        <div class="footer-container">
-            
+    <footer class="footer">
+        <div class="footer-container display-flex">
+            <div class="footer-item1">
+                <div class="display-flex">
+                    <img src="./assets/logo.png" alt="">
+                    <h2>Kid's Education</h2>
+                </div>
+                <p>Education is the foundation of a bright future, and childhood is where it begins.<br> We nurture curiosity, creativity, and a love for learning in every child.<br> Through engaging activities and guided exploration, we help young minds grow and thrive.<br> Together, we build confident learners ready to take on the world</p>
+            </div>
+            <div class="footer-item2">
+                <h2>About School</h2>
+                <div class="footer-menu-container">
+                    <p>Home</p>
+                    <p>About</p>
+                    <p>Facilities</p>
+                    <p>Admission</p>
+                </div>
+            </div>
+            <div class="footer-item3">
+                <h2>Keep in touch</h2>
+                <div class="social-img display-flex">
+                    <img src="./assets/fb.png" alt="">
+                    <img src="./assets/google+.png" alt="">
+                    <img src="./assets/dribble.png" alt="">
+                    <img src="./assets/twitter.png" alt="">
+                </div>
+            </div>
         </div>
     </footer>
 </body>
