logo image issue fixed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="nav-container display-flex">
             <div class="logo-container display-flex">
-                <img src="../assets/logo.png" alt="Kid's school logo" class="logo">
+                <img src="./assets/logo.png" alt="Kid's school logo" class="logo">
                 <h1 class="head-title">KID'S SCHOOL</h1>
             </div>
             <div class="nav-manu-container display-flex">
@@ -116,8 +116,9 @@
                 <button class="view-btn primary-btn">View All</button>
             </div>       
         </section>
-        
+
     </main>
+
     <footer class="footer">
         <div class="footer-container display-flex">
             <div class="footer-item1">
